# vaults_economics

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_audit_compliance.py  test_vaults_economics_dtd.py
tests/fixtures/: submitReportData_tx_0xb1168ee90b001b3e04e76618a085c9dbb7eddb1415f462c839c6728110a4b86f.json  submitReportData_tx_0xc79165e96f1d3267ef86f0c3d0156a2d060167f76c2549072b670eea9d16cc72.json  vault_report_sample_0xb1168ee90b001b3e04e76618a085c9dbb7eddb1415f462c839c6728110a4b86f.json  vault_report_sample_0xc79165e96f1d3267ef86f0c3d0156a2d060167f76c2549072b670eea9d16cc72.json
vaults_economics/: __init__.py  __main__.py  analytics.py  blockchain.py  cache.py  cli.py  console.py  constants.py  contracts.py  formatters.py  html_report.py  ipfs.py  models.py  onchain.py  parsing.py  reports.py  validation.py  vaults_economics_dtd.py
