[project]
name = "vaults-economics"
version = "0.1.0"
description = "Standalone: Vault economics day-to-date analysis from Lido AccountingOracle daily reports (Ethereum mainnet)"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10,<4"
dependencies = [
    "requests>=2.31.0",
    "web3>=7.8.0,<8",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pre-commit>=3.5.0",
    "ruff>=0.5.0",
    "mdformat>=0.7.0",
]

[project.scripts]
vaults-economics-dtd = "vaults_economics:_entry_point"
ve = "vaults_economics:_entry_point"
vaults = "vaults_economics:_entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vaults_economics"]

[tool.hatch.build.targets.sdist]
exclude = []

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
