[project]
name = "vaults-economics"
version = "0.1.0"
description = "Standalone: Vault economics day-to-date analysis from Lido AccountingOracle daily reports (Ethereum mainnet)"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10,<4"
dependencies = [
    "requests>=2.31.0",
    "web3>=7.8.0,<8",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pre-commit>=3.5.0",
    "ruff>=0.5.0",
    "mdformat>=0.7.0",
    "mypy>=1.0.0",
    "types-requests",
    "types-tqdm",
    "pip-audit>=2.7.0",
]

[project.scripts]
vaults-economics-dtd = "vaults_economics:_entry_point"
ve = "vaults_economics:_entry_point"
vaults = "vaults_economics:_entry_point"
vaults-clear-cache = "vaults_economics:_clear_cache_entry_point"
cc = "vaults_economics:_clear_cache_entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vaults_economics"]

[tool.hatch.build.targets.sdist]
exclude = []

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
    "G",   # flake8-logging-format
    "ARG", # flake8-unused-arguments
]
allowed-confusables = ["ℹ", "×", "−"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = true
